log
Wed 27 Mar 2024 07:23:39 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6e318d8
Wed 27 Mar 2024 07:27:41 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c29df81
Wed 27 Mar 2024 07:28:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
801ca10
Wed 27 Mar 2024 07:31:13 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
3761198
Wed 27 Mar 2024 07:32:27 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
240b56e
Wed 27 Mar 2024 07:34:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
06a96f2
Wed 27 Mar 2024 07:34:47 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7f83cc1
Wed 27 Mar 2024 07:39:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
5b873d1
Wed 27 Mar 2024 07:42:33 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6facc26
Wed 27 Mar 2024 07:45:07 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0e4cd1c
Wed 27 Mar 2024 07:45:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
5d96c0a
Wed 27 Mar 2024 07:47:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5b78743
Wed 27 Mar 2024 07:47:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
75c02ad
Wed 27 Mar 2024 07:48:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1dbad0f
Wed 27 Mar 2024 07:49:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b96ae60
Wed 27 Mar 2024 07:50:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6e96cf8
Wed 27 Mar 2024 07:52:35 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
c1b643d
Wed 27 Mar 2024 07:53:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6f9bec1
Wed 27 Mar 2024 08:02:17 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b7401c1
Wed 27 Mar 2024 08:03:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
159424f
Wed 27 Mar 2024 08:05:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1d11e6c
Wed 27 Mar 2024 08:06:38 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
eaae5f6
Wed 27 Mar 2024 08:08:58 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6cf1ff9
Wed 27 Mar 2024 08:09:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fdf5352
Wed 27 Mar 2024 08:13:44 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
5cf6beb
Wed 27 Mar 2024 08:16:11 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
a5c5f24
Wed 27 Mar 2024 08:24:36 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d931c1d
Wed 27 Mar 2024 08:26:29 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
1837d05
Wed 27 Mar 2024 08:27:20 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
35c63e8
Wed 27 Mar 2024 08:29:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9a3d9f4
Wed 27 Mar 2024 08:30:25 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
dfac76d
Wed 27 Mar 2024 08:31:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9d328d6
Wed 27 Mar 2024 08:33:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
921ca84
Wed 27 Mar 2024 08:34:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4519bf0
Wed 27 Mar 2024 08:35:10 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1aaf8b9
Wed 27 Mar 2024 08:35:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
27f32bd
Wed 27 Mar 2024 08:37:43 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 25/70
adbd606
Wed 27 Mar 2024 08:42:21 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|3
total_score: 35/70
7615cf1
Wed 27 Mar 2024 08:48:46 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|3
total_score: 35/70
591cdc9
Wed 27 Mar 2024 09:00:46 PM UTC: 
 list.c | 26 +++++++++++++++++++-------
 1 file changed, 19 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:119:5: error: statement with no effect [-Werror=unused-value]
  119 |     newNode
      |     ^~~~~~~
list.c:119:12: error: expected ‘;’ before ‘}’ token
  119 |     newNode
      |            ^
      |            ;
  120 |   }
      |   ~         
cc1: all warnings being treated as errors
Compilation failed
a0be06d
Wed 27 Mar 2024 09:01:09 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 35/70
b96cc3d
Wed 27 Mar 2024 09:02:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 35/70
d08b1f7
Wed 27 Mar 2024 09:03:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1e270d3
Sat 30 Mar 2024 03:34:56 PM UTC: 
 list.c | 26 ++++++++++++++------------
 1 file changed, 14 insertions(+), 12 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:116:5: error: statement with no effect [-Werror=unused-value]
  116 |     newNode
      |     ^~~~~~~
list.c:116:12: error: expected ‘;’ before ‘}’ token
  116 |     newNode
      |            ^
      |            ;
  117 |   }
      |   ~         
cc1: all warnings being treated as errors
Compilation failed
064081e
Sat 30 Mar 2024 03:35:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:116:5: error: statement with no effect [-Werror=unused-value]
  116 |     newNode;
      |     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2d01704
Sat 30 Mar 2024 04:50:49 PM UTC: 
 list.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:110:3: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
  110 |   newNode->data = data;
      |   ^~~~~~~
      |   Node
list.c:110:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e6943e3
